Learning es6 spread,rest operator

--- a/js_basic/ঠ.Error_handling.html
+++ b/js_basic/ঠ.Error_handling.html
@@ -15,6 +15,7 @@
       console.log("We are working well😇");
       console.log(x); // Ehh!! x is not defined
       const msg = "See?? I am not working for a error";
+      console.log (msg);
     }catch(error){
       console.log (error);
       console.log (error.name);
