--- a/mini_project/Copy_to_clipboard.html
+++ b/mini_project/Copy_to_clipboard.html
@@ -100,6 +100,7 @@
   <script type="text/javascript" charset="utf-8">
     const btn = document.querySelectorAll(".btn")[0];
     const text = document.querySelectorAll("#text")[0];
+    text.value = crypto.randomUUID();
       btn.addEventListener("click",()=>{
         text.select();
         document.execCommand("copy");
