wtf mini_project/SkeletonAnimation.html

--- a/mini_project/SkeletonAnimation.html
+++ b/mini_project/SkeletonAnimation.html
@@ -93,7 +93,7 @@
         background: -webkit-linear-gradient(
           left,
           transparent,
-          rgba(255,255,255,0.5),
+          rgba(255, 255, 255, 0.5),
           transparent
         );
         transform: rotate(45deg);
