Doing my regular coding practise :)

--- a/test/all/Save.html
+++ b/test/all/Save.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="" content="" />
     <title></title>
+    <script src="./index.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <div
@@ -147,6 +148,7 @@
         </div>
       </div>
     </div>
+    <!-- 
     <script type="text/javascript" charset="utf-8">
       const {
               id,
@@ -167,5 +169,6 @@
               preview_file_url,
             } = await json;
     </script>
+    -->
   </body>
 </html>
