--- a/mini_project/prompt_split.html
+++ b/mini_project/prompt_split.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/style.css" rel="stylesheet" />
     <style type="text/css" media="all">
       * {
         margin: 0;
@@ -37,31 +37,30 @@
     </style>
   </head>
   <body>
-  <div class="container"></div>
-  <script type="text/javascript" charset="utf-8">
-    const container = document.querySelectorAll(".container")[0];
+    <div class="container"></div>
+    <script type="text/javascript" charset="utf-8">
+      const container = document.querySelectorAll(".container")[0];
 
-const hexa=()=>{
-  const hex = [..."abcdef0123456789"];
-  let code = "";
-  for (var i = 0; i < 6; i++) {
-    code += hex[Math.floor(Math.random()*hex.length)] ;
-  }
-  return code;
-};
+      const hexa = () => {
+        const hex = [..."abcdef0123456789"];
+        let code = "";
+        for (var i = 0; i < 6; i++) {
+          code += hex[Math.floor(Math.random() * hex.length)];
+        }
+        return code;
+      };
 
+      const prompt =
+        "fukaya_miku genshin_impact ganyu_(genshin_impact) highres md5_mismatch resolution_mismatch source_smaller 1girl ahoge bangs bare_shoulders bell black_gloves blue_hair blush breasts brushing_hair cloud_retainer_damasked_device_(genshin_impact) comb detached_sleeves gloves holding holding_comb horns indoors long_hair looking_at_viewer medium_breasts neck_bell purple_eyes sidelocks smile sparkle upper_body white_sleeves window";
+      const splited = prompt.split(" ");
+      let nn = "";
+      for (var i = 0; i < splited.length; i++) {
+        nn += `<p class="word" style="background-color:#${hexa()}; border: 1px solid #${hexa()}">${
+          splited[i]
+        }</p>`;
+      }
 
-
-const prompt = "fukaya_miku genshin_impact ganyu_(genshin_impact) highres md5_mismatch resolution_mismatch source_smaller 1girl ahoge bangs bare_shoulders bell black_gloves blue_hair blush breasts brushing_hair cloud_retainer_damasked_device_(genshin_impact) comb detached_sleeves gloves holding holding_comb horns indoors long_hair looking_at_viewer medium_breasts neck_bell purple_eyes sidelocks smile sparkle upper_body white_sleeves window";
-const splited = prompt.split(" ");
-let nn = "";
-for (var i = 0; i < splited.length; i++) {
-   nn += `<p class="word" style="background-color:#${hexa()}; border: 1px solid #${hexa()}">${splited[i]}</p>`;
-}
-
-
-
-container.innerHTML = nn;
-  </script>
+      container.innerHTML = nn;
+    </script>
   </body>
 </html>
