--- a/animejs/project/J12.svgLineTracking.html
+++ b/animejs/project/J12.svgLineTracking.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="" content="" />
     <title></title>
     <style type="text/css" media="all">
@@ -38,6 +39,9 @@
   </head>
   <body>
     <div class="continer">
+      <div class="emoji"></div>
+      <div class="emoji"></div>
+      <div class="emoji"></div>
       <div class="emoji"></div>
       <div class="emoji"></div>
       <div class="emoji"></div>
