added meta tag in animejs projects

--- a/animejs/project/J13.animejsSnakeAnimation.html
+++ b/animejs/project/J13.animejsSnakeAnimation.html
@@ -47,7 +47,11 @@
   </head>
   <body>
     <div class="container"></div>
-    <script src="./anime.min.js" type="text/javascript" charset="utf-8"></script>
+    <script
+      src="./anime.min.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
     <script type="text/javascript" charset="utf-8">
       var container = document.querySelectorAll(".container")[0];
       var blocks = document.querySelectorAll(".block")[0];
