--- a/lab/index.html
+++ b/lab/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="css/style.css" rel="stylesheet" />
+    <script src="./tailwind.js" type="text/javascript" charset="utf-8"></script>
   </head>
-  <body></body>
+  <body
+    class="w-full h-screen bg-slate-900 flex justify-center items-center flex-col"
+  >
+    <div
+      class="container relative bg-teal-800 w-full flex flex-wrap border-2 border-slate-900"
+    ></div>
+    <script src="./index.js" type="text/javascript" charset="utf-8"></script>
+  </body>
 </html>
