--- a/lab/index.html
+++ b/lab/index.html
@@ -2,11 +2,56 @@
 <html lang="en">
   <head>
     <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/style.css" rel="stylesheet" />
+    <style type="text/css" media="all">
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        width: 100%;
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
+      .box {
+        width: 300px;
+        height: 300px;
+        padding: 10px;
+        margin: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        position: relative;
+      }
+      .default {
+        background: -webkit-linear-gradient(pink, violet, teal);
+      }
+      .repeat {
+        background: -webkit-repeating-linear-gradient(45deg, violet, teal 10%);
+      }
+      .radial {
+        background: -webkit-radial-gradient(violet, green, orange, teal);
+      }
+      .linear {
+        background: -webkit-linear-gradient(right, orange, pink, yellow, teal);
+      }
+      .conic {
+        background: -webkit-conic-gradient(10deg, violet, teal, green, orange);
+      }
+    </style>
   </head>
   <body>
-  
+    <div class="box default">Default</div>
+    <div class="box repeat">Repeat</div>
+    <div class="box radial">Radial</div>
+    <div class="box linear">Linear</div>
+    <div class="box conic">Conic</div>
   </body>
 </html>
