🫒🫒🫒 That was a spelling mistake 🫒🫒🫒

--- a/js_basic/A. Print something in JavaScript.html
+++ b/js_basic/A. Print something in JavaScript.html
@@ -27,7 +27,7 @@
       let name = prompt("What is your name?");
       alert("Hi " + name + ", This is a alert box💝");
 
-      let result = confirm("Do you eant to leave this page?");
+      let result = confirm("Do you want to leave this page?");
       if (result == true) {
         alert("Thanks for visiting 💝");
       } else {
