--- a/mini_project/YearHoverEffect.html
+++ b/mini_project/YearHoverEffect.html
@@ -7,14 +7,22 @@
     <link href="css/style.css" rel="stylesheet" />
     <style>
       * {
-        margin="0";
-        padding="0";
-        box-sizing="border-box";
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+        line-height: 1.5;
+        font-weight: 400;
+        font-synthesis: none;
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        -webkit-text-size-adjust: 100%;
       }
       body {
-        width:100%;
-        min-height:100vh;
-        display:flex;
+        width: 100%;
+        min-height: 100vh;
+        display: flex;
         justify-content: center;
         align-items: center;
         background-color: #212121;
@@ -34,7 +42,7 @@
       }
       .box > b {
         font-size: 3em;
-        -webkit-text-stroke:1px var(--clr);
+        -webkit-text-stroke: 1px var(--clr);
       }
       .box::before {
         content: attr(data-text);
